@startuml player
IOnTurn <|.. Player
abstract class Player{
    score : Integer
    id : Integer
    onTurn() : abstract void
}

Player <|-- Mushroomer
Mushroomer o-- "1..*" MushroomStem
Mushroomer o-- "0..*" MushroomThread
Mushroomer --- "1..*" Colony
class Mushroomer{
    mushroomStems : List<MushroomStem>
    mushroomThreads : List<MushroomThread>
    spores : List<Spore>
    getColonies() : List<Colony>
    plantStem(Tecton) : void
    throwSpore(MushroomStem, Tecton, Spore) : void
    onTurn() : void
}

Insecter --|> Player
Insecter o-- Insect
class Insecter{
    insect : Insect
    eat(Spore) : void
    moveInsect(Tecton) : void
    cutThread(MushroomThread) : void
    onTurn() : void
}
@enduml